--- a/vue-cdn-project/index.html
+++ b/vue-cdn-project/index.html
@@ -14,6 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap cdn -->
+
+    <!-- css -->
+    <link rel="stylesheet" href="./style.css">
+    <!-- css -->
     <title>Vue JS CDN</title>
 </head>
 
@@ -22,13 +26,14 @@
         <div class="container">
             <div class="row d-flex justify-content-center align-items-center vh-100">
                 <div class="col-lg-3 col-md-6 col-10" v-for="(item, index) in persons" :key="item.id">
-                    <div class="card px-1 py-4 border border-dark">
+                    <div class="card px-1 py-4 border border-tomato">
                         <div class="text-center">
                             <img :src="item.img.src" alt="dev-img" height="150" width="150"
-                                class="border border-dark rounded-circle">
+                                class="border border-tomato rounded-circle">
                         </div>
 
-                        <h4 class="text-center my-1">{{item.person.firstName}} {{item.person.lastName}}</h4>
+                        <h4 class="text-center my-1 tomato-color">{{item.person.firstName}} {{item.person.lastName}}
+                        </h4>
 
                         <h6 class="text-center my-1">
                             {{item.education.universityName}}
@@ -37,11 +42,21 @@
                             {{item.education.departmentName}}
                         </h6>
 
-                        <div class="text-center">
-                            <a :href="item.portfolio.link" target="_blank" class="btn btn-dark my-1 col-6">
-                                View Details
-                            </a>
-                        </div>
+                        <template v-if="item.gender === 'Male'">
+                            <div class="text-center">
+                                <a :href="item.portfolio.link" target="_blank" class="btn btn-dark my-1 col-6">
+                                    View Details
+                                </a>
+                            </div>
+                        </template>
+
+                        <template v-else>
+                            <div class="text-center">
+                                <a :href="item.portfolio.link" target="_blank" class="btn btn-tomato my-1 col-6">
+                                    View Details
+                                </a>
+                            </div>
+                        </template>
                     </div>
                 </div>
             </div>
